# cp1

Dice/: CMakeLists.txt  dice.c
Echo/: run.txt
Echo/MacOS/: client.c  run.txt  server.c
Echo/Win/: client.c  server.c
Maze/: CMakeLists.txt  maze.c
SocketsHelloWorld/: server.c
